[package]
name = "tokenizers"
version = "0.1.0"
authors = ["Vladimir Mladenović <mlad.vladimir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.15.0"
tokenizers = "0.8.0"

[lib]
crate_type = ["cdylib"]
